--- a/default.twig
+++ b/default.twig
@@ -1,82 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{{ title }}</title>
+    <title>{{ title }}</title>
 
-        <link rel="stylesheet" href="{{ baseUrl }}/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/css/highlight.dark.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/css/main.css">
-    </head>
-    <body>
+    <link rel="stylesheet" href="{{ baseUrl }}/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ baseUrl }}/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ baseUrl }}/css/highlight.dark.css">
+    <link rel="stylesheet" href="{{ baseUrl }}/css/main.css">
+</head>
+<body>
 
-        <header class="navbar navbar-default navbar-fixed-top">
-
-            <a class="navbar-brand" href="{{ baseUrl }}/">
-                {{ title|default('The title') }}
-                <small class="hidden-xs hidden-sm">
-                    {{ subTitle|default('This is the default subtitle!') }}
-                </small>
-            </a>
-
-            {% if github is defined %}
-                <a href="https://github.com/{{ github.user }}/{{ github.repo }}">
-                    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+    <header class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ baseUrl }}/">
+                    {{ title|default('The title') }}
+                    <small class="hidden-xs hidden-sm">
+                        {{ subTitle|default('This is the default subtitle!') }}
+                    </small>
                 </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    {% if navLinks is defined %}
+                    {% for itemId, item in navLinks.items %}
+                    <li class="{{ itemId == currentMenu ? 'active' }}">
+                        <a href="{{ item.absoluteUrl|default(baseUrl ~ '/' ~ item.relativeUrl) }}" target="{{ item.target|default('_self') }}">
+                            {{ item.text|raw }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                    {% endif %}
+                    {% if github is defined %}
+                    <li class="fa-icon">
+                        <a href="https://github.com/{{ github.user }}/{{ github.repo }}" target="_blank">
+                            <i class="fa fa-github fa-2x"></i>
+                        </a>
+                    </li>
+                    {% endif %}
+
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <main class="{{ menu ? 'container-fluid' : 'container' }}">
+        <div class="row">
+
+            {% if menu is defined %}
+
+            <nav id="sidebar" class="col-sm-3 col-lg-2" role="navigation">
+
+                <ul class="nav nav-pills nav-stacked">
+                    {% for itemId, item in menu.items %}
+                    <li class="{{ itemId == currentMenu ? 'active' }}">
+                        <a href="{{ item.absoluteUrl|default(baseUrl ~ '/' ~ item.relativeUrl) }}" target="{{ item.target|default('_self') }}">
+                            {{ item.text|raw }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+
+            </nav>
+
             {% endif %}
 
-        </header>
+            <section id="content" class="{{ menu ? 'col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10' : 'col-sm-12' }}">
+                {{ content|raw }}
+            </section>
 
-        <main class="{{ menu ? 'container-fluid' : 'container' }}">
-            <div class="row">
+        </div>
+    </main>
 
-                {% if menu is defined %}
+    <footer>
+        <div class="{{ menu ? 'container-fluid' : 'container' }}">
+            <p class="text-muted">
+                website generated with <a href="http://couscous.io" title="Markdown website generator">Couscous</a>
+            </p>
+        </div>
+    </footer>
 
-                    <nav id="sidebar" class="col-sm-3 col-lg-2" role="navigation">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="//yastatic.net/highlightjs/8.2/highlight.min.js"></script>
 
-                        <ul class="nav nav-pills nav-stacked">
-                            {% for itemId, item in menu.items %}
-                                <li class="{{ itemId == currentMenu ? 'active' }}">
-                                    <a href="{{ item.absoluteUrl|default(baseUrl ~ '/' ~ item.relativeUrl) }}">
-                                        {{ item.text|raw }}
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
+    <script>
+    $(function() {
+        $("section>h1").wrap('<div class="page-header" />');
+        // Syntax highlighting
+        hljs.initHighlightingOnLoad();
+    });
+    </script>
 
-                    </nav>
-
-                {% endif %}
-
-                <section id="content" class="{{ menu ? 'col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10' : 'col-sm-12' }}">
-                    {{ content|raw }}
-                </section>
-
-            </div>
-        </main>
-
-        <footer>
-            <div class="{{ menu ? 'container-fluid' : 'container' }}">
-                <p class="text-muted">
-                    website generated with <a href="http://couscous.io" title="Markdown website generator">Couscous</a>
-                </p>
-            </div>
-        </footer>
-
-        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-        <script src="//yastatic.net/highlightjs/8.2/highlight.min.js"></script>
-
-        <script>
-            $(function() {
-                $("section>h1").wrap('<div class="page-header" />');
-                // Syntax highlighting
-                hljs.initHighlightingOnLoad();
-            });
-        </script>
-
-    </body>
+</body>
 </html>
